--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Escreva uma Mensagem para o Cabeçalho da Página.</div>
+	<div class="alert">Não conheci o outro mundo por querer!</div>
 	
 	<div class="container">
 		<div class="logo">
